# fedless

./: .gitignore  CITATIONS.bib  README.md  codecov.yml  config-template.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
experiments/: fedless-analysis-ieee-camera-ready.ipynb  plot_utils.py
experiments/flower/: .gitignore  client.Dockerfile  client.py  run.sh  server.Dockerfile  server.py
experiments/performance/aggregation/: fedavg-memory.py  run_plot.sh
experiments/privacy/: local-dp-mnist-runs.sh
fedless/: aggregation.py  auth.py  cache.py  client.py  data.py  evaluation.py  invocation.py  models.py  persistence.py  providers.py  serialization.py
fedless/benchmark/: common.py  fedkeeper.py  leaf.py  models.py  scripts.py
fedless/benchmark/simulation/: fedavg.py
images/flower/: Dockerfile
kubernetes/data-file-server/: config-map.yaml  deployment.yaml  service.yaml
kubernetes/parameter-server/: Chart.yaml  values.yaml
requirements/: requirements.txt  test_requirements.txt
scripts/cluster/: deploy-file-server.sh  deploy-openfaas.sh  deploy-parameter-server.sh  master-setup.sh  openwhisk-setup.sh  worker-setup.sh
scripts/datasets/: load-femnist.sh  load-shakespeare.sh
scripts/experiments/: backup-experiments.sh
scripts/images/: deploy-flower-base.sh  deploy-lambda-base.sh  deploy-openwhisk-base.sh
scripts/python/: deploy-wheel-to-s3.sh  release.sh
test/: common.py  fixtures.py  stubs.py  test_aggregation.py  test_client.py  test_data.py  test_integ_client.py  test_invocation.py  test_models.py  test_providers.py  test_serialize.py
(+51 files in other folders)
