[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = '--cov=fedless --cov-report=xml --cov-branch -m "not integ"'
testpaths = [
    "test"
]
markers = [
    "integ: marks tests as integration tests (deselect with '-m \"not integ\"')",
]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
  )
)
'''
